# commerce-project

./: .gitignore  compose.yaml
backend/: Dockerfile  pom.xml  pyproject.toml
backend/mysite/mysite/: settings.py
backend/mysite/olx/: urls.py  views.py
backend/src/: database.py  main.py  router.py
backend/src/api/v1/: listings.py  users.py
backend/src/main/java/com/example/oferte_directe/: Oferte_DirecteApplication.java
backend/src/main/java/com/example/oferte_directe/aws_config/: S3ClientCustom.java  SNSClientCustom.java  SendEmail.java
backend/src/main/java/com/example/oferte_directe/controller/: ListingController.java  UserController.java
backend/src/main/java/com/example/oferte_directe/entity/: Listing.java  User.java
backend/src/main/java/com/example/oferte_directe/repository/: ListingRepository.java  UserRepository.java
backend/src/main/java/com/example/oferte_directe/security/: CorsConfig.java
backend/src/main/java/com/example/oferte_directe/service/: ListingImpl.java  ListingService.java  UserImpl.java  UserService.java
backend/src/main/java/com/example/olx/aws_config/: S3Config.java  SendEmail.java
backend/src/main/java/com/example/olx/controller/: ListingController.java
backend/src/main/java/com/example/olx/entity/: Listing.java
backend/src/main/java/com/example/olx/repository/: ListingRepository.java
backend/src/main/resources/: application.properties  data.sql  schema.sql
backend/src/models/: listing.py  user.py
backend/src/test/java/com/example/oferte_directe/: OferteDirecteApplicationTests.java
frontend/: Dockerfile  (+4 more)
(+39 files in other folders)
