[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["stefan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.5"
djangorestframework = "^3.14.0"
boto3 = "^1.26.0"
django-cors-headers = "^3.14.0"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
bcrypt = "^4.1.3"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
